--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -42,14 +42,15 @@ library(visR)
 
 
 #source("color_map.R")
-source("ggplot_theme.R")
+source("~/MyGithub/Functions_and_Themes/ggplot_theme.R")
+
 ```
 
 ## Load data & combine female and male events
 
 ```{r}
 # Female data
-eelifeF <- read.table('../processed/Female_events_eelife.txt',
+eelife <- read.table('../ProcessedData/Female_events_lifespan.txt',
                      sep = "\t", header = TRUE,
                      stringsAsFactors = FALSE) 
 
